Add an example for translating plurals

--- a/public/locale/messages.bg.json
+++ b/public/locale/messages.bg.json
@@ -1,10 +1,14 @@
 {
   "locale": "bg-BG",
   "translations": {
+    "language": "Език: ",
     "siteTitle": "Добре дошли!",
     "siteDescription": "Това е локализирана страница.",
     "todayDate": "Днес е {$INTERPOLATION}",
     "logoAlt": "Това е моето лого",
+    "itemCount": "{VAR_PLURAL, plural, =0 {Няма елементи} =1 {Един елемент} other {{INTERPOLATION} елемента}}",
+    "itemCountClear": "Добави елемент",
+    "itemCountIncrement": "Изчисти",
     "customMessage": "Това съобщение идва от компонента!"
   }
 }
